name:                PointCloudViewer
version:             0.1.1.0
synopsis:            PCD file point cloud viewer.
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (c) Anthony Cowley 2012
category:            Robotics
build-type:          Simple
cabal-version:       >=1.8
data-files:          etc/cloud.vert etc/cloud.frag 
                     etc/GroundPlane.vert etc/GroundPlane.frag

executable pcview
  cpp-options:    -DCABAL
  main-is:        Main.hs
  ghc-options:    -O2 -Wall -rtsopts
  other-modules:  Camera, FrameGrabber, HeatPalette, MyPaths, PointsGL, 
                  Renderer, PointLoader, Paths_PointCloudViewer, PCDCleaner, 
                  VizMarkers
  hs-source-dirs: src
  build-depends:  base, text, mtl, lens, vector, bytestring, attoparsec, binary,
                  OpenGL, transformers, GLFW-b, GLUtil,
                  filepath, distributive, deepseq, JuicyPixels, containers, 
                  linear >= 0.4.1, directory, ply-loader, pcd-loader